Bug 496675 - Fails to build with git pimcommon
Summary: Fails to build with git pimcommon
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-25 16:36 UTC by daron439
Modified: 2024-11-25 17:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description daron439 2024-11-25 16:36:12 UTC
SUMMARY
Fails to build after https://invent.kde.org/pim/pimcommon/-/commit/6b481e131cf38fca52467a3fd2492e7c5aaf08b9

STEPS TO REPRODUCE
1. Build

OBSERVED RESULT

/builddir/build/BUILD/kaddressbook-24.11.80_2.gite25f5cc-build/kaddressbook-e25f5ccb83b97e171af3cb71452bf495dd60ae3a/src/configuration/kaddressbook_config_plugins.cpp:25:73: error: ‘changed’ is not a member of ‘PimCommon::ConfigurePluginsWidget’
   25 |     connect(mConfigurePluginWidget, &PimCommon::ConfigurePluginsWidget::changed, this, &KCMKaddressbookPluginsConfig::slotConfigChanged);
      |                                                                         ^~~~~~~
Comment 1 Laurent Montel 2024-11-25 17:00:41 UTC
Git commit 749ec02d38caed57c0ce24602432597b9f1137f0 by Laurent Montel.
Committed on 25/11/2024 at 17:00.
Pushed by mlaurent into branch 'release/24.12'.

Fix Bug 496675: Fails to build with git pimcommon

M  +3    -1    src/configuration/kaddressbook_config_plugins.cpp

https://invent.kde.org/pim/kaddressbook/-/commit/749ec02d38caed57c0ce24602432597b9f1137f0