Fix Bug 496675: Fails to build with git pimcommon

BUG: 496675